Updated About Page, Logo

--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About – Uffman Finance &amp; Accounting Consulting</title>
+    <title>About – Uffman Consulting Group</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
         <div class="container header-container">
-            <h1 class="logo"><a href="index.html">Uffman Consulting</a></h1>
+            <h1 class="logo"><a href="index.html">Uffman Consulting Group</a></h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -24,27 +24,31 @@
 
     <section class="inner-hero">
         <div class="container">
-            <h2>Meet Andrew Uffman, MBA</h2>
-            <p>Financial leader, problem‑solver and advocate for businesses who need clarity and control over their cash flow.</p>
+            <h2>Our Story</h2>
+            <p>Big‑company financial expertise, personalized for your business.</p>
         </div>
     </section>
 
     <section class="about-content">
         <div class="container">
-            <h3>Professional journey</h3>
-            <p>Andrew brings more than a decade of hands‑on financial experience, including 8 years running order‑to‑cash functions at a Fortune 11 pharmaceutical distributor.  At AmerisourceBergen, he managed 45 global finance professionals and oversaw $8B in client receivables while achieving team KPIs and leading process‑improvement initiatives.  Earlier roles include Finance Manager at a fast‑growing apartment‑locating company and accounts receivable leadership positions at logistics and energy firms.  Across these roles he gained deep expertise in billing, collections, cash application, budgeting, forecasting, and financial modeling.</p>
+            <h3>Our Story</h3>
+            <p>Uffman Consulting Group was born from a simple truth: every growing business needs the strategic financial guidance of a seasoned leader, but not every company can justify hiring a full‑time finance executive. After more than a decade managing multi‑billion‑dollar order‑to‑cash operations at a Fortune 11 pharmaceutical distributor, Andrew Uffman saw countless smaller firms struggle with cash‑flow uncertainty, inefficient billing practices and ballooning days‑sales‑outstanding. Andrew founded Uffman Consulting Group to bring big‑company expertise to locally owned businesses in North Texas—delivering clarity and confidence without the cost or complexity of a large corporate finance department.</p>
 
-            <h3>Leadership &amp; collaboration</h3>
-            <p>Andrew’s people‑first leadership style retains and develops talent.  He has built high‑performing teams, created career progression plans and improved onboarding programs.  Collaboration is central to his approach—whether partnering with IT to implement bots that save $80K annually, guiding cross‑functional teams through ERP integrations, or working with executives to develop annual strategic plans.  He believes effective order‑to‑cash management requires every stakeholder from finance, operations and customer service to work in harmony.</p>
+            <h3>Our Mission</h3>
+            <p>We exist to empower small and medium‑sized businesses with the same disciplined cash‑flow management and strategic insight that Fortune‑level companies enjoy. By focusing on the order‑to‑cash cycle—billing, collections, cash application and forecasting—we help clients accelerate growth, improve liquidity and make informed decisions.</p>
 
-            <h3>Analytical mindset</h3>
-            <p>Data is the foundation for Andrew’s advice.  He has designed scorecards and dashboards to track DSO, receivables currency, and un‑invoiced orders; built custom CRM and collections systems that improved receivables currency by 26 %; and developed sophisticated financial models for M&amp;A evaluation, profitability analysis and cash‑flow forecasting.  His critical‑thinking skills allow him to uncover inefficiencies and recommend solutions that deliver measurable ROI.</p>
+            <h3>What Sets Us Apart</h3>
+            <ul>
+                <li><strong>Deep expertise with a personal touch:</strong> Andrew’s experience leading a team responsible for $8 billion in receivables translates into proven systems and best practices. Yet our engagements are tailored and collaborative, because no two businesses share the same challenges.</li>
+                <li><strong>Data‑driven and forward‑looking:</strong> We build dashboards and forecasting tools that turn numbers into actionable insight, so you can anticipate cash‑flow needs and seize opportunities before they slip away.</li>
+                <li><strong>People‑first philosophy:</strong> Great financial processes are built by great teams. We partner with your staff and vendors to create a culture of accountability and clear communication, ensuring that improvements stick.</li>
+            </ul>
 
-            <h3>Education &amp; certifications</h3>
-            <p>Andrew earned his Master of Business Administration from the Satish &amp; Yasmin Gupta College of Business.  During his MBA he was an active member of Beta Gamma Sigma and served as president of Sigma Iota Epsilon.  He continues to stay current on industry best practices in accounts receivable and finance.</p>
+            <h3>Our Values</h3>
+            <p>Integrity, transparency and continuous learning guide everything we do. We believe that honest conversations and measurable results build trust, and that local businesses deserve the same level of care and rigor as larger enterprises.</p>
 
-            <h3>Community &amp; values</h3>
-            <p>Born and raised in Texas, Andrew is passionate about helping local businesses thrive.  Outside the office he enjoys strength training and spending time with his family.  He prides himself on integrity, accountability and a commitment to continuous learning.</p>
+            <h3>Why Choose Uffman Consulting Group?</h3>
+            <p>Working with us means you gain a trusted advisor dedicated to your success. We’ll help you design processes that support sustainable growth, strengthen relationships with customers, and give you peace of mind.</p>
         </div>
     </section>
 
@@ -58,7 +62,7 @@
 
     <footer class="site-footer">
         <div class="container footer-container">
-            <p>&copy; <span id="year"></span> Uffman Finance &amp; Accounting Consulting.</p>
+            <p>&copy; <span id="year"></span> Uffman Consulting Group.</p>
         </div>
     </footer>
     <script>
