--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact – Uffman Finance &amp; Accounting Consulting</title>
+    <title>Contact – Uffman Consulting Group</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
         <div class="container header-container">
-            <h1 class="logo"><a href="index.html">Uffman Consulting</a></h1>
+            <h1 class="logo">
+                <a href="index.html">
+                    <img src="logo.png" alt="Uffman Consulting Group logo" class="logo-img">
+                    Uffman Consulting Group
+                </a>
+            </h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -33,14 +38,15 @@
         <div class="container contact-container">
             <div class="contact-info">
                 <h3>Contact Details</h3>
-                <p><strong>Email:</strong> <a href="mailto:andrew@example.com">andrew@example.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:andrew@uffmanconsultingroup.com">andrew@uffmanconsultingroup.com</a></p>
                 <p><strong>Phone:</strong> (XXX) XXX‑XXXX</p>
                 <p><strong>Location:</strong> Dallas–Fort Worth, Texas</p>
                 <p>We serve clients throughout the North Texas region.  Please call or send a message to schedule a consultation.</p>
             </div>
             <div class="contact-form">
                 <h3>Send a message</h3>
-                <form action="mailto:andrew@example.com" method="post" enctype="text/plain">
+                <!-- Update mailto to send to the professional domain -->
+                <form action="mailto:andrew@uffmanconsultingroup.com" method="post" enctype="text/plain">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="Name" required>
                     <label for="email">Email</label>
@@ -55,7 +61,7 @@
 
     <footer class="site-footer">
         <div class="container footer-container">
-            <p>&copy; <span id="year"></span> Uffman Finance &amp; Accounting Consulting.</p>
+            <p>&copy; <span id="year"></span> Uffman Consulting Group.</p>
         </div>
     </footer>
     <script>
