--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uffman Finance &amp; Accounting Consulting – Order‑to‑Cash Experts</title>
+    <title>Uffman Consulting Group – Order‑to‑Cash Experts</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,13 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container header-container">
-            <h1 class="logo"><a href="index.html">Uffman Finance &amp; Accounting Consulting</a></h1>
+            <!-- Update the firm name throughout the site -->
+            <h1 class="logo">
+                <a href="index.html">
+                    <img src="logo.png" alt="Uffman Consulting Group logo" class="logo-img">
+                    Uffman Consulting Group
+                </a>
+            </h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
@@ -67,7 +73,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-container">
-            <p>&copy; <span id="year"></span> Uffman Finance &amp; Accounting Consulting.  Based in Dallas–Fort Worth, Texas.</p>
+            <p>&copy; <span id="year"></span> Uffman Consulting Group.  Based in Dallas–Fort Worth, Texas.</p>
         </div>
     </footer>
 
