--- a/services.html
+++ b/services.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services – Uffman Finance &amp; Accounting Consulting</title>
+    <title>Services – Uffman Consulting Group</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
         <div class="container header-container">
-            <h1 class="logo"><a href="index.html">Uffman Consulting</a></h1>
+            <h1 class="logo">
+                <a href="index.html">
+                    <img src="logo.png" alt="Uffman Consulting Group logo" class="logo-img">
+                    Uffman Consulting Group
+                </a>
+            </h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -68,7 +73,7 @@
 
     <footer class="site-footer">
         <div class="container footer-container">
-            <p>&copy; <span id="year"></span> Uffman Finance &amp; Accounting Consulting.</p>
+            <p>&copy; <span id="year"></span> Uffman Consulting Group.</p>
         </div>
     </footer>
     <script>
