--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <div class="features">
                 <div class="feature">
                     <h3>Real‑world leadership</h3>
-                    <p>Andrew Uffman, MBA, has led financial service teams managing billions in receivables for Fortune 500 clients and local businesses alike.  His leadership has produced measurable results such as 26 % improvements in receivables currency and $80K in annual savings through automation.</p>
+                    <p>Our team has led financial service teams managing billions in receivables for Fortune 500 clients and local businesses alike, producing measurable results such as 26 % improvements in receivables currency and $80K in annual savings through automation.</p>
                 </div>
                 <div class="feature">
                     <h3>Collaborative approach</h3>
-                    <p>Partnership means understanding your business. Andrew works with your executives, finance staff and IT teams to design processes that suit your culture and goals.  From performance dashboards to custom training programs, solutions are tailored to your people.</p>
+                    <p>Partnership means understanding your business. Our team works with your executives, finance staff and IT teams to design processes that suit your culture and goals.  From performance dashboards to custom training programs, solutions are tailored to your people.</p>
                 </div>
                 <div class="feature">
                     <h3>Analytical rigor</h3>
