--- a/about.html
+++ b/about.html
@@ -32,14 +32,14 @@
     <section class="about-content">
         <div class="container">
             <h3>Our Story</h3>
-            <p>Uffman Consulting Group was born from a simple truth: every growing business needs the strategic financial guidance of a seasoned leader, but not every company can justify hiring a full‑time finance executive. After more than a decade managing multi‑billion‑dollar order‑to‑cash operations at a Fortune 11 pharmaceutical distributor, Andrew Uffman saw countless smaller firms struggle with cash‑flow uncertainty, inefficient billing practices and ballooning days‑sales‑outstanding. Andrew founded Uffman Consulting Group to bring big‑company expertise to locally owned businesses in North Texas—delivering clarity and confidence without the cost or complexity of a large corporate finance department.</p>
+            <p>Uffman Consulting Group was born from a simple truth: every growing business needs the strategic financial guidance of a seasoned leader, but not every company can justify hiring a full‑time finance executive. After more than a decade managing multi‑billion‑dollar order‑to‑cash operations at a Fortune 10 pharmaceutical distributor, Andrew saw countless smaller firms struggle with cash‑flow uncertainty, inefficient billing practices and ballooning days‑sales‑outstanding. Andrew founded Uffman Consulting Group to bring big‑company expertise to locally owned businesses in North Texas—delivering clarity and confidence without the cost or complexity of a large corporate finance department.</p>
 
             <h3>Our Mission</h3>
             <p>We exist to empower small and medium‑sized businesses with the same disciplined cash‑flow management and strategic insight that Fortune‑level companies enjoy. By focusing on the order‑to‑cash cycle—billing, collections, cash application and forecasting—we help clients accelerate growth, improve liquidity and make informed decisions.</p>
 
             <h3>What Sets Us Apart</h3>
             <ul>
-                <li><strong>Deep expertise with a personal touch:</strong> Andrew’s experience leading a team responsible for $8 billion in receivables translates into proven systems and best practices. Yet our engagements are tailored and collaborative, because no two businesses share the same challenges.</li>
+                <li><strong>Deep expertise with a personal touch:</strong> Andrew’s experience leading a team responsible for $12 billion in receivables translates into proven systems and best practices. Yet our engagements are tailored and collaborative, because no two businesses share the same challenges.</li>
                 <li><strong>Data‑driven and forward‑looking:</strong> We build dashboards and forecasting tools that turn numbers into actionable insight, so you can anticipate cash‑flow needs and seize opportunities before they slip away.</li>
                 <li><strong>People‑first philosophy:</strong> Great financial processes are built by great teams. We partner with your staff and vendors to create a culture of accountability and clear communication, ensuring that improvements stick.</li>
             </ul>
