--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <div class="contact-info">
                 <h3>Contact Details</h3>
                 <p><strong>Email:</strong> <a href="mailto:andrew@uffmanconsultingroup.com">andrew@uffmanconsultingroup.com</a></p>
-                <p><strong>Phone:</strong> (XXX) XXX‑XXXX</p>
+                <p><strong>Phone:</strong> (469) 545‑0720</p>
                 <p><strong>Location:</strong> Dallas–Fort Worth, Texas</p>
                 <p>We serve clients throughout the North Texas region.  Please call or send a message to schedule a consultation.</p>
             </div>
