Nav update: Digital Tools

--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="financial-tools/">Financial Tools</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -41,14 +42,14 @@
     <section class="about-content">
         <div class="container">
             <h3>Our Story</h3>
-            <p>Uffman Consulting Group was born from a simple truth: every growing business needs the strategic financial guidance of a seasoned leader, but not every company can justify hiring a full‑time finance executive. After more than a decade managing multi‑billion‑dollar order‑to‑cash operations at a Fortune 10 pharmaceutical distributor, Andrew saw countless smaller firms struggle with cash‑flow uncertainty, inefficient billing practices and ballooning days‑sales‑outstanding. Andrew founded Uffman Consulting Group to bring big‑company expertise to locally owned businesses in North Texas—delivering clarity and confidence without the cost or complexity of a large corporate finance department.</p>
+            <p>Uffman Consulting Group was born from a simple truth: every growing business needs the strategic financial guidance of a seasoned leader, but not every company can justify hiring a full‑time finance executive. After more than a decade managing multi‑billion‑dollar order‑to‑cash operations at a Fortune 10 pharmaceutical distributor, Andrew saw countless smaller firms struggle with cash‑flow uncertainty, inefficient billing practices and ballooning days‑sales‑outstanding. Andrew founded Uffman Consulting Group to bring big‑company expertise to locally owned businesses in North Texas—delivering clarity and confidence without the cost or complexity of a large corporate finance department.</p>
 
             <h3>Our Mission</h3>
             <p>We exist to empower small and medium‑sized businesses with the same disciplined cash‑flow management and strategic insight that Fortune‑level companies enjoy. By focusing on the order‑to‑cash cycle—billing, collections, cash application and forecasting—we help clients accelerate growth, improve liquidity and make informed decisions.</p>
 
             <h3>What Sets Us Apart</h3>
             <ul>
-                <li><strong>Deep expertise with a personal touch:</strong> Andrew’s experience leading a team responsible for $12 billion in receivables translates into proven systems and best practices. Yet our engagements are tailored and collaborative, because no two businesses share the same challenges.</li>
+                <li><strong>Deep expertise with a personal touch:</strong> Andrew's experience leading a team responsible for $12 billion in receivables translates into proven systems and best practices. Yet our engagements are tailored and collaborative, because no two businesses share the same challenges.</li>
                 <li><strong>Data‑driven and forward‑looking:</strong> We build dashboards and forecasting tools that turn numbers into actionable insight, so you can anticipate cash‑flow needs and seize opportunities before they slip away.</li>
                 <li><strong>People‑first philosophy:</strong> Great financial processes are built by great teams. We partner with your staff and vendors to create a culture of accountability and clear communication, ensuring that improvements stick.</li>
             </ul>
@@ -56,15 +57,15 @@
             <h3>Our Values</h3>
             <p>Integrity, transparency and continuous learning guide everything we do. We believe that honest conversations and measurable results build trust, and that local businesses deserve the same level of care and rigor as larger enterprises.</p>
 
-            <h3>Why Choose Uffman Consulting Group?</h3>
-            <p>Working with us means you gain a trusted advisor dedicated to your success. We’ll help you design processes that support sustainable growth, strengthen relationships with customers, and give you peace of mind.</p>
+            <h3>Why Choose Uffman Consulting Group?</h3>
+            <p>Working with us means you gain a trusted advisor dedicated to your success. We'll help you design processes that support sustainable growth, strengthen relationships with customers, and give you peace of mind.</p>
         </div>
     </section>
 
     <section class="cta light">
         <div class="container cta-container">
-            <h2>Let’s drive your cash flow forward</h2>
-            <p>Reach out today to discuss how Andrew’s expertise can support your accounts receivable and order‑to‑cash needs.</p>
+            <h2>Let's drive your cash flow forward</h2>
+            <p>Reach out today to discuss how Andrew's expertise can support your accounts receivable and order‑to‑cash needs.</p>
             <a href="contact.html" class="btn primary-btn">Contact Andrew</a>
         </div>
     </section>
@@ -78,4 +79,4 @@
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
-</html>
+</html> 
