--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="financial-tools/">Financial Tools</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
@@ -39,7 +40,7 @@
     <section class="inner-hero">
         <div class="container">
             <h2>Get in Touch</h2>
-            <p>Have questions?  Interested in working together?  We’d love to hear from you.</p>
+            <p>Have questions?  Interested in working together?  We'd love to hear from you.</p>
         </div>
     </section>
 
@@ -48,9 +49,9 @@
             <div class="contact-info">
                 <h3>Contact Details</h3>
                 <p><strong>Email:</strong> <a href="mailto:andrew@uffmanconsultingroup.com">andrew@uffmanconsultingroup.com</a></p>
-                <p><strong>Phone:</strong> (469) 545‑0720</p>
-                <p><strong>Location:</strong> Dallas–Fort Worth, Texas</p>
-                <p>We serve clients throughout the North Texas region.  Please call or send a message to schedule a consultation.</p>
+                <p><strong>Phone:</strong> (469) 545‑0720</p>
+                <p><strong>Location:</strong> Dallas–Fort Worth, Texas</p>
+                <p>We serve clients throughout the North Texas region.  Please call or send a message to schedule a consultation.</p>
             </div>
             <div class="contact-form">
                 <h3>Send a message</h3>
@@ -77,4 +78,4 @@
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
-</html>
+</html> 
