--- a/services.html
+++ b/services.html
@@ -30,6 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html" class="active">Services</a></li>
+                    <li><a href="financial-tools/">Financial Tools</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -63,7 +64,7 @@
             </div>
             <div class="service-item">
                 <h3>System Selection &amp; Integration</h3>
-                <p>Whether implementing a new CRM, integrating with your ERP or automating manual tasks, our technical knowledge ensures you select the right technology and implement it successfully.  We’ve led custom CRM builds, bot deployments and ERP integrations that deliver measurable ROI.</p>
+                <p>Whether implementing a new CRM, integrating with your ERP or automating manual tasks, our technical knowledge ensures you select the right technology and implement it successfully.  We've led custom CRM builds, bot deployments and ERP integrations that deliver measurable ROI.</p>
             </div>
             <div class="service-item">
                 <h3>Training &amp; Fractional Leadership</h3>
@@ -74,8 +75,8 @@
 
     <section class="cta light">
         <div class="container cta-container">
-            <h2>Let’s build the right solution for you</h2>
-            <p>Whether you need a quick process audit or ongoing support, we’ll tailor services to your business’s unique needs.</p>
+            <h2>Let's build the right solution for you</h2>
+            <p>Whether you need a quick process audit or ongoing support, we'll tailor services to your business's unique needs.</p>
             <a href="contact.html" class="btn primary-btn">Start a Conversation</a>
         </div>
     </section>
@@ -89,4 +90,4 @@
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
-</html>
+</html> 
