--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="financial-tools/">Financial Tools</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -43,7 +44,7 @@
         <div class="container hero-container">
             <div class="hero-text">
                 <h2>Elevate Your Cash Flow</h2>
-                <p>Expert Order‑to‑Cash and accounts receivable consulting tailored for growing businesses across the Dallas–Fort Worth metroplex.  Put three decades of financial leadership to work for you.</p>
+                <p>Expert Order‑to‑Cash and accounts receivable consulting tailored for growing businesses across the Dallas–Fort Worth metroplex.  Put three decades of financial leadership to work for you.</p>
                 <a href="services.html" class="btn primary-btn">Explore Services</a>
             </div>
         </div>
@@ -56,7 +57,7 @@
             <div class="features">
                 <div class="feature">
                     <h3>Real‑world leadership</h3>
-                    <p>Our team has led financial service teams managing billions in receivables for Fortune 500 clients and local businesses alike, producing measurable results such as 26 % improvements in receivables currency and $80K in annual savings through automation.</p>
+                    <p>Our team has led financial service teams managing billions in receivables for Fortune 500 clients and local businesses alike, producing measurable results such as 26 % improvements in receivables currency and $80K in annual savings through automation.</p>
                 </div>
                 <div class="feature">
                     <h3>Collaborative approach</h3>
@@ -82,7 +83,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-container">
-            <p>&copy; <span id="year"></span> Uffman Consulting Group.  Based in Dallas–Fort Worth, Texas.</p>
+            <p>&copy; <span id="year"></span> Uffman Consulting Group.  Based in Dallas–Fort Worth, Texas.</p>
         </div>
     </footer>
 
@@ -91,4 +92,4 @@
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
-</html>
+</html> 
