--- a/index.html
+++ b/index.html
@@ -1,95 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1YXM5BJ4H2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-1YXM5BJ4H2');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uffman Consulting Group – Order‑to‑Cash Experts</title>
+    <title>Uffman Consulting Group - Order-to-Cash & Accounts Receivable Consulting</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
     <header class="site-header">
         <div class="container header-container">
-            <!-- Update the firm name throughout the site -->
             <h1 class="logo">
                 <a href="index.html">
-                    <img src="logo.png" alt="Uffman Consulting Group logo" class="logo-img">
                     Uffman Consulting Group
                 </a>
             </h1>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="financial-tools/">Financial Tools</a></li>
+                    <li><a href="/financial-tools/">Financial Tools</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="container hero-container">
-            <div class="hero-text">
+    <main class="main-content">
+        <section class="hero">
+            <div class="container">
                 <h2>Elevate Your Cash Flow</h2>
-                <p>Expert Order‑to‑Cash and accounts receivable consulting tailored for growing businesses across the Dallas–Fort Worth metroplex.  Put three decades of financial leadership to work for you.</p>
-                <a href="services.html" class="btn primary-btn">Explore Services</a>
+                <p>Expert Order-to-Cash and Accounts Receivable Consulting for Growing Businesses</p>
+                <p class="location">Dallas–Fort Worth Metroplex</p>
+                <a href="services.html" class="btn btn-primary">Our Services</a>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Why Choose Us -->
-    <section class="why">
-        <div class="container">
-            <h2>Why Partner With Uffman Consulting?</h2>
-            <div class="features">
-                <div class="feature">
-                    <h3>Real‑world leadership</h3>
-                    <p>Our team has led financial service teams managing billions in receivables for Fortune 500 clients and local businesses alike, producing measurable results such as 26 % improvements in receivables currency and $80K in annual savings through automation.</p>
-                </div>
-                <div class="feature">
-                    <h3>Collaborative approach</h3>
-                    <p>Partnership means understanding your business. Our team works with your executives, finance staff and IT teams to design processes that suit your culture and goals.  From performance dashboards to custom training programs, solutions are tailored to your people.</p>
-                </div>
-                <div class="feature">
-                    <h3>Analytical rigor</h3>
-                    <p>Decisions are grounded in data.  Detailed analyses, forecasting models and scorecards provide transparency into DSO, cash conversion and profitability so you can make informed decisions with confidence.</p>
+        <section class="services-preview">
+            <div class="container">
+                <h3>What We Do</h3>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <h4>AR Process Optimization</h4>
+                        <p>Streamline your accounts receivable processes for faster collections and improved cash flow.</p>
+                    </div>
+                    <div class="service-card">
+                        <h4>Cash Flow Forecasting</h4>
+                        <p>Build accurate 12-month cash flow projections to make better business decisions.</p>
+                    </div>
+                    <div class="service-card">
+                        <h4>Digital Tools & Analytics</h4>
+                        <p>Professional financial dashboards and reporting tools designed for your business.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
-    <!-- Call To Action -->
-    <section class="cta">
-        <div class="container cta-container">
-            <h2>Ready to strengthen your AR?</h2>
-            <p>Schedule a free consultation to discuss how we can help your business accelerate cash flow, improve processes and reduce risk.</p>
-            <a href="contact.html" class="btn secondary-btn">Get in Touch</a>
-        </div>
-    </section>
-
-    <!-- Footer -->
     <footer class="site-footer">
-        <div class="container footer-container">
-            <p>&copy; <span id="year"></span> Uffman Consulting Group.  Based in Dallas–Fort Worth, Texas.</p>
+        <div class="container">
+            <p>&copy; 2025 Uffman Consulting Group. Based in Dallas–Fort Worth, Texas.</p>
         </div>
     </footer>
-
-    <script>
-        // update copyright year
-        document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
 </body>
 </html> 
