--- a/services.html
+++ b/services.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1YXM5BJ4H2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-1YXM5BJ4H2');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services – Uffman Consulting Group</title>
+    <title>Services - Uffman Consulting Group</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -21,7 +12,6 @@
         <div class="container header-container">
             <h1 class="logo">
                 <a href="index.html">
-                    <img src="logo.png" alt="Uffman Consulting Group logo" class="logo-img">
                     Uffman Consulting Group
                 </a>
             </h1>
@@ -29,65 +19,62 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="services.html" class="active">Services</a></li>
-                    <li><a href="financial-tools/">Financial Tools</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="/financial-tools/">Financial Tools</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section class="inner-hero">
-        <div class="container">
-            <h2>Our Services</h2>
-            <p>Customised solutions that optimise your order‑to‑cash cycle.</p>
-        </div>
-    </section>
+    <main class="main-content">
+        <section class="inner-hero">
+            <div class="container">
+                <h2>Our Services</h2>
+                <p>Comprehensive Order-to-Cash and Accounts Receivable Solutions</p>
+            </div>
+        </section>
 
-    <section class="services-list">
-        <div class="container">
-            <div class="service-item">
-                <h3>Accounts Receivable Audit &amp; Optimisation</h3>
-                <p>We analyse your entire receivables process—from customer onboarding to invoice generation and collections—to identify bottlenecks and inefficiencies.  Our recommendations target improved invoice accuracy, faster dispute resolution and reduced DSO.</p>
-            </div>
-            <div class="service-item">
-                <h3>Order‑to‑Cash Process Consulting</h3>
-                <p>Optimise every step of your order‑to‑cash workflow.  We design streamlined processes that align sales, operations and finance teams, ensuring that orders are fulfilled efficiently and revenue is recognised promptly.</p>
-            </div>
-            <div class="service-item">
-                <h3>Cash Forecasting &amp; Reporting</h3>
-                <p>Gain insight into your future cash position.  Using advanced financial models and dashboards, we provide forecasts that help you plan for growth, manage working capital and make strategic decisions with confidence.</p>
-            </div>
-            <div class="service-item">
-                <h3>Collections Strategy &amp; Training</h3>
-                <p>A strong collections strategy protects relationships while accelerating payments.  We develop customised collection policies, scripts and training programs so your team can handle difficult conversations effectively and professionally.</p>
-            </div>
-            <div class="service-item">
-                <h3>System Selection &amp; Integration</h3>
-                <p>Whether implementing a new CRM, integrating with your ERP or automating manual tasks, our technical knowledge ensures you select the right technology and implement it successfully.  We've led custom CRM builds, bot deployments and ERP integrations that deliver measurable ROI.</p>
-            </div>
-            <div class="service-item">
-                <h3>Training &amp; Fractional Leadership</h3>
-                <p>Equip your team with the skills they need to succeed.  We provide training on invoicing, cash application, dispute management and performance metrics.  For organisations that need additional guidance, Andrew can serve as a fractional AR manager or interim finance leader.</p>
-            </div>
-        </div>
-    </section>
+        <section class="services-content">
+            <div class="container">
+                <div class="service-item">
+                    <h3>AR Process Optimization</h3>
+                    <p>Streamline your accounts receivable processes for faster collections and improved cash flow.</p>
+                    <ul>
+                        <li>Invoice processing optimization</li>
+                        <li>Collection strategy development</li>
+                        <li>Customer credit management</li>
+                    </ul>
+                </div>
 
-    <section class="cta light">
-        <div class="container cta-container">
-            <h2>Let's build the right solution for you</h2>
-            <p>Whether you need a quick process audit or ongoing support, we'll tailor services to your business's unique needs.</p>
-            <a href="contact.html" class="btn primary-btn">Start a Conversation</a>
-        </div>
-    </section>
+                <div class="service-item">
+                    <h3>Cash Flow Forecasting</h3>
+                    <p>Build accurate 12-month cash flow projections to make better business decisions.</p>
+                    <ul>
+                        <li>Monthly cash flow modeling</li>
+                        <li>Scenario analysis</li>
+                        <li>Working capital optimization</li>
+                    </ul>
+                </div>
+
+                <div class="service-item">
+                    <h3>Digital Tools & Analytics</h3>
+                    <p>Professional financial dashboards and reporting tools designed for your business.</p>
+                    <ul>
+                        <li>AR aging dashboards</li>
+                        <li>Cash flow forecasting models</li>
+                        <li>Performance analytics</li>
+                    </ul>
+                    <a href="/financial-tools/" class="btn btn-primary">View Our Tools</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer class="site-footer">
-        <div class="container footer-container">
-            <p>&copy; <span id="year"></span> Uffman Consulting Group.</p>
+        <div class="container">
+            <p>&copy; 2025 Uffman Consulting Group. Based in Dallas–Fort Worth, Texas.</p>
         </div>
     </footer>
-    <script>
-        document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
 </body>
 </html> 
