--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="/financial-tools/">Financial Tools</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
